# openballistics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
codegen/: __main__.py  api.py  ballistics_api.py  binding.py  bindings.py  constants.py  definition.py  docs.py  model_definitions.py  patcher.py  properties.py  property.py  spec.py  specs.py  utils.py
codegen/docs/: ballistics_api.yml
codegen/spec/: environment.yml  projectile.yml
codegen/spec/environment/: realistic.yml
codegen/spec/integrator/: runge_kutta_4.yml  runge_kutta_dormand_prince_5.yml
codegen/spec/model/: modified_point_mass.yml  point_mass.yml
codegen/spec/projectile/: realistic.yml
codegen/spec/trajectory_model/: modified_point_mass.yml  point_mass.yml
codegen/specs/: environment.yml  projectile.yml
codegen/specs/integrators/: rk4.yml  rk45.yml  runge_kutta_4.yml  runge_kutta_dormand_prince_5.yml
codegen/specs/models/: modified_point_mass.yml  point_mass.yml
core/: CMakeLists.txt
core/include/: openballistics.hpp
core/include/openballistics/: angles.hpp  ballistics.hpp  enums.hpp  environment.hpp  integrator.hpp  integrators.hpp  model.hpp  models.hpp  numbers.hpp  projectile.hpp  trajectory_model.hpp  types.hpp
core/include/openballistics/api/: ballistics.hpp
core/include/openballistics/environment/: realistic.hpp
core/include/openballistics/integrator/: runge_kutta_4.hpp  runge_kutta_dormand_prince_5.hpp
core/include/openballistics/integrators/: rk4.hpp  rk45.hpp  runge_kutta_4.hpp  runge_kutta_dormand_prince_5.hpp
core/include/openballistics/interpolator/: lazy_linear.hpp  lazy_trilinear.hpp  linear.hpp
core/include/openballistics/interpolators/: lazy_linear.hpp  lazy_trilinear.hpp  linear.hpp
core/include/openballistics/math/: minimizer.hpp  root.hpp
core/include/openballistics/model/: modified_point_mass.hpp  point_mass.hpp
core/include/openballistics/models/: modified_point_mass.hpp  point_mass.hpp
core/include/openballistics/projectile/: realistic.hpp
core/include/openballistics/trajectory_model/: modified_point_mass.hpp  point_mass.hpp
python/: CMakeLists.txt
python/src/: bindings.cpp
python/src/openballistics/: __init__.py  _core.pyi  ballistics.py  enums.py  environment.py  integrator.py  projectile.py  types.py
