[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "openballistics"
version = "0.0.9"
requires-python = ">=3.9"
dependencies = ["numpy"]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ariyudo Pertama", email = "yudojago@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["ballistics", "point mass", "modified point mass"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/src/openballistics"]
